--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-form": "^1.23.8",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
